k8-cloudnative-postgresql-stack/istio/tcp-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tcp-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # Use the Istio IngressGateway
  servers:
    - port:
        number: 5432
        name: tcp
        protocol: TCP
      hosts:
        - "*"
