k8-cloudnative-postgresql-stack/istio/pg-service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: pg-postgresql
  namespace: istio-system
spec:
  hosts:
    - syn-insights-postgresql-rw.pg.svc.cluster.local
  ports:
    - number: 5432
      name: tcp
      protocol: TCP
  resolution: DNS
  location: MESH_INTERNAL
  exportTo:
    - "*"
