k8-cloudnative-postgresql-stack/istio/pg-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tcp-service
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/tcp-gateway
  tcp:
    - match:
        - port: 5432
      route:
        - destination:
            host: syn-insights-postgresql-rw.pg.svc.cluster.local # prefer fully qualified domain name
            port:
              number: 5432
